--- a/app/pages/meta_search/index.njk
+++ b/app/pages/meta_search/index.njk
@@ -27,14 +27,14 @@
 
           <div class="flex inherit sub-content-wrapper">
             <ul class="jcC inherit triangle-arrow-list">
-              <li><a href="#">ビジネスカードを作りたい</a></li>
-              <li><a href="#">業務を効率化したい</a></li>
-              <li><a href="#">福利厚生を充実させたい</a></li>
+              <li><a href="/business_card_creation/">ビジネスカードを作りたい</a></li>
+              <li><a href="/business_efficiency/">業務を効率化したい</a></li>
+              <li><a href="/welfare/">福利厚生を充実させたい</a></li>
             </ul>
 
             <ul class="jcC inherit triangle-arrow-list pipe-list">
-              <li><a href="#">経費を削減したい</a></li>
-              <li><a href="#">資金繰りを改善したい</a></li>
+              <li><a href="/reduction_expenses/">経費を削減したい</a></li>
+              <li><a href="/improve_cash_flow/">資金繰りを改善したい</a></li>
             </ul>
           </div>
         </div>
