--- a/app/pages/business_support_loan/index.njk
+++ b/app/pages/business_support_loan/index.njk
@@ -89,7 +89,7 @@
 
         <div class="section-welcome-info-right">
           <div class="section-welcome-right__img">
-            <img src="/assets/img/business_support_loan/business_support_loan_banner_inner.png"/>
+            <img class="pc-only" src="/assets/img/business_support_loan/business_support_loan_banner_inner.png"/>
           </div>
         </div>
       </div>
