--- a/app/pages/payment_com/index.njk
+++ b/app/pages/payment_com/index.njk
@@ -128,7 +128,7 @@ link: "#material"
         請求書払いをカードで先のばし。振り込みはお任せ！<br />
         <span class="font-weight-normal">期限の迫った請求書も、支払いまで最長60日余裕をプラス。資金繰りを改善し、借りずに事業を加速できます。</span>
       </h4>
-      <img src="/assets/img/common/cash-flow.png" alt="cast flow">
+      <img id="zoomImg" class="zoomImg" src="/assets/img/common/cash-flow.png" alt="cast flow">
     </div>
   </section>
 
