--- a/app/assets/scss/3-modules/_button.scss
+++ b/app/assets/scss/3-modules/_button.scss
@@ -790,8 +790,7 @@
     color: #ffffff;
     opacity: 1;
     &::before {
-      border-top: 3px solid $white-color;
-      border-right: 3px solid $white-color;
+      content: none!important ;
     }
     span {
       color: white;
