--- a/app/assets/scss/4-pages/_business_card_creation.scss
+++ b/app/assets/scss/4-pages/_business_card_creation.scss
@@ -756,6 +756,8 @@
     .ttl-tertiary {
       &.small {
         font-size: 20px !important;
+        font-weight: 400;
+        line-height: 1.75;
         @media #{$sp} {
           font-size: 16px !important;
           line-height: 25px;
