--- a/app/assets/scss/4-pages/_business_support_loan.scss
+++ b/app/assets/scss/4-pages/_business_support_loan.scss
@@ -116,6 +116,7 @@
             width: 100%;
             height: 100%;
             z-index: -1;
+            background-color: #23a4a4;
           }
 
           img {
