--- a/app/pages/business_efficiency/index.njk
+++ b/app/pages/business_efficiency/index.njk
@@ -32,7 +32,7 @@ link: "#"
       </h3>
       <h1 class="ttl-primary">業務効率化をサポートするサービス</h1>
       <h4 class="ttl-quaternary">クレディセゾンは中小企業様・個人事業主様向けに、<br>
-        今すぐ始められて効果を実感できる業務効率化サービスをご提供いたします。
+        今すぐ始められて効果を実感できる業務効率化サービスを提供いたします。
       </h4>
     </div>
   </section>
