responsive payment_page

--- a/app/assets/scss/1-tools/_vars.scss
+++ b/app/assets/scss/1-tools/_vars.scss
@@ -53,6 +53,7 @@ $green-color-1: #53d2b2;
 $green-color-2: #24a4a4;
 $green-color-3: #58b79d;
 $green-color-4: #49b4b4;
+$green-color-5: #49b4b4;
 
 $gray-color: #f1f1f1;
 $gray-color-2: #a7a7a7;
