--- a/app/_template/partial/top_header.njk
+++ b/app/_template/partial/top_header.njk
@@ -31,7 +31,7 @@
                 <div class="nav__dropdown__search">
                   <div class="nav__dropdown__search__container">
                     <div class="nav__dropdown__search__title">目的から探す</div>
-                    <a class="bondi_blue_outline_btn">
+                    <a href="/service" class="bondi_blue_outline_btn">
                       <span class="bondi_blue_outline_btn__tittle"
                         >サービス一覧を見る</span
                       >
