--- a/app/pages/payment_com/index.njk
+++ b/app/pages/payment_com/index.njk
@@ -61,7 +61,7 @@ link: "#material"
 <main class="payment_com-page">
   <section id="top" class="section-welcome fadein">
     <div class="section-welcome__banner">
-      <img src="/assets/img/common/banner_service.png"/>
+      <img class="pc-only" src="/assets/img/common/banner_service.png"/>
     </div>
 
     <div class="section-welcome-container">
@@ -78,13 +78,13 @@ link: "#material"
           <h3 class="ttl-tertiary">全ての支払いを、<span class="special">最長60日後</span>に <br />カードで先延ばしできます。</h3>
           <div class="btn-action">
             <a href="https://shi-harai.com/signup/" target="_blank" class="act-more orange_more2">
-              <div class="act-more-tooltip">
+              <div class="act-more-tooltip pc-only">
                 <h4 class="act-more-tooltip__content">審査なし・書類提出不要！</h4>
               </div>
               今すぐ無料で登録
             </a>
             <a href="#" class="act-more orange_more2">
-              <div class="act-more-tooltip">
+              <div class="act-more-tooltip pc-only">
                 <h4 class="act-more-tooltip__content">支払い.comが3分でわかる！</h4>
               </div>
               資料ダウンロード
@@ -92,7 +92,7 @@ link: "#material"
           </div>
         </div>
 
-        <div class="section-welcome-info-right pc-only">
+        <div class="section-welcome-info-right">
           <ul class="info-list">
             <li><span class="special">最短1日後</span>の振り込みに対応！※1</li>
             <li><span class="special">一律4%</span>のお得な手数料</li>
@@ -101,19 +101,6 @@ link: "#material"
           <div class="info-note">
             <span>※1 …UPSIDERカード・セゾンカード利用で</span>
             <span>　前営業日正午までに振り込みを行った場合</span>
-          </div>
-        </div>
-
-        <div class="section-welcome-right-sp sp-only">
-          <img src="/assets/img/common/payment_com_banner.png" >
-          <ul class="info-list">
-            <li><span class="special">最短1日後</span>の振り込みに対応！※1</li>
-            <li><span class="special">一律4%</span>のお得な手数料</li>
-            <li>サービス開始1年で導入企業数 <span class="special">20,000社</span>突破！</li>
-          </ul>
-          <div class="info-note-sp">
-            <span class="text-muted">※1 …UPSIDERカード・セゾンカード利用で</span>
-            <span class="text-muted">　前営業日正午までに振り込みを行った場合</span>
           </div>
         </div>
       </div>
@@ -265,10 +252,10 @@ link: "#material"
           </div>
         </div>
         <div class="information">
-          <span class="primary-txt">振込名義は自由に指定OK</span> 　お客様の名前で振り込みできるので、支払先へは利用を知られません
+          <span class="primary-txt">振込名義は自由に指定OK</span> <br class="sp-only"/> 　お客様の名前で振り込みできるので、支払先へは利用を知られません
         </div>
         <div>
-          <a href="https://shi-harai.com/signup/" target="_blank" class="act-more orange_more2">
+          <a href="https://shi-harai.com/signup/" target="_blank" class="act-more blue_gradient_btn">
             <div class="act-more-tooltip">
               <h4 class="act-more-tooltip__content">{{ "お急ぎの方はまずは無料登録！\n 審査や書類提出は必要ありません。" | safe }}</h4>
             </div>
@@ -325,7 +312,7 @@ link: "#material"
 
   <section id="comment" class="section-voice fadein">
     <h5 class="ttl-notice">{{ payment_page.voice.sub_title }}</h5>
-    <h2 class="ttl-secondary">{{ payment_page.voice.title }}</h2>
+    <h1 class="ttl-primary">{{ payment_page.voice.title }}</h1>
     <div class="section-primary__wrapper">
       <div class="containers">
         <ul class="inherit card-list">
@@ -347,7 +334,7 @@ link: "#material"
   <section id="faq" class="section-question-and-answer fadein">
     <div class="container">
       <h5 class="ttl-notice">FAQ</h5>
-      <h2 class="ttl-secondary">よくある質問</h2>
+      <h1 class="ttl-primary">よくある質問</h1>
       <span class="section-question-and-answer__description">
         お客様からよくいただくご質問にお答えします。この他にご質問がある方は、<a href="/contact">お問い合わせフォーム</a>より、お気軽にご連絡ください。
         </br>
