--- a/app/assets/scss/4-pages/_payment_com.scss
+++ b/app/assets/scss/4-pages/_payment_com.scss
@@ -15,6 +15,7 @@
       }
       @media #{$sp} {
         font-size: 20px;
+        line-height: 1.75;
         text-align: center !important;
       }
     }
@@ -266,8 +267,9 @@
         right: 0;
 
         @media #{$sp} {
-          position: relative;
-          margin: auto;
+          position: unset;
+          margin-top: 30px;
+          margin-inline: auto;
           width: 85%;
         }
 
