--- a/app/pages/saison_invoice/index.njk
+++ b/app/pages/saison_invoice/index.njk
@@ -61,13 +61,13 @@
   <main class="saison-invoice-page">
   <section id="top" class="section-welcome fadein">
     <div class="section-welcome__banner">
-      <img src="/assets/img/saison_invoice/saison_invoice_banner.png"/>
+      <img class="pc-only"  src="/assets/img/saison_invoice/saison_invoice_banner.png"/>
     </div>
 
     <div class="section-welcome-info">
       <div class="section-welcome-info-left">
         <div class="section-welcome__inner">
-          <h3 class="ttl-tertiary">{{"BtoB向け後払い決済 \n・請求代行サービス" | safe}}</h3>
+          <h3 class="ttl-tertiary">BtoB向け後払い決済・請求代行サービス</h3>
         </div>
         <div class="section-welcome__title">
           <h1 class="ttl-primary">セゾンインボイス</h1>
@@ -79,7 +79,7 @@
         </div>
         <div class="section-welcome__act">
           <a href="#" class="act-more orange_more2">
-            <div class="act-more-tooltip">
+            <div class="act-more-tooltip pc-only">
               <h4 class="act-more-tooltip__content">セゾンインボイスが3分でわかる！</h4>
             </div>
             資料ダウンロード
@@ -87,9 +87,9 @@
         </div>
       </div>
 
-      <div class="section-welcome-info-right pc-only">
+      <div class="section-welcome-info-right">
         <div class="section-welcome-right__img">
-          <img src="/assets/img/saison_invoice/saison-invoice_inner.png"/>
+          <img class="pc-only" src="/assets/img/saison_invoice/saison-invoice_inner.png"/>
 
           <ul class="info-list">
             <li class="info-item">月額固定費0円・手数料率は<span class="special">業界最低水準！</span></li>
@@ -97,16 +97,6 @@
             <li class="info-item">最短翌日入金で、<span class="special">キャッシュフローも改善</span></li>
           </ul>
         </div>
-      </div>
-
-      <div class="section-welcome-info-right-sp sp-only">
-        <img src="/assets/img/saison_invoice/saison-invoice_inner.png"/>
-
-        <ul class="info-list">
-          <li class="info-item">月額固定費0円・手数料率は<span class="special">業界最低水準！</span></li>
-          <li class="info-item">請求から回収業務の督促まで<span class="special">すべて委託！</span></li>
-          <li class="info-item">最短翌日入金で、<span class="special">キャッシュフローも改善</span></li>
-        </ul>
       </div>
     </div>
   </section>
@@ -325,7 +315,7 @@
               <h3 class="card-issue-title"><span>支払い日までの運転資金確保が大変</span></h3>
             </div>
             <div class="triangle"></div>
-            <h1 class="card-solution-title">最短翌日の入金<span>で、運転資金をスピード確保。</span>。</h1>
+            <h1 class="card-solution-title">最短翌日の入金<span>で、運転資金をスピード確保</span>。</h1>
             <div class="card-solution-content">
               <div class="card-solution-content__img">
                 <img src="/assets/img/saison_invoice/saison_solution3.png" />
@@ -352,7 +342,7 @@
     </section>
 
     <section id="comment" class="section-voice fadein">
-      <h5 class="ttl-sub">VOICE</h5>
+      <h4 class="ttl-secondary">VOICE</h4>
       <h2 class="ttl-primary">ご利用者様の声</h2>
       <div class="list__wrapper">
         <div class="containers">
