--- a/app/assets/scss/4-pages/_personal.scss
+++ b/app/assets/scss/4-pages/_personal.scss
@@ -71,6 +71,9 @@
 
       .ttl-primary {
         margin-bottom: 0;
+        @media #{$sp} {
+          font-size: 30px;
+        }
       }
     }
   }
@@ -86,6 +89,10 @@
     .ttl-primary {
       font-size: 32px;
       margin-bottom: 61px;
+      @media #{$sp} {
+        font-size: 20px;
+        line-height: 1.75;
+      }
     }
 
     .ttl-quaternary {
@@ -186,6 +193,9 @@
     text-align: center;
     background-color: $green-color;
     color: #ffffff;
+    @media #{$sp} {
+      padding: 35px 15px;
+    }
 
     .ttl-sub {
       font-size: 14px;
@@ -196,12 +206,22 @@
     .ttl-secondary {
       font-size: 32px;
       margin-bottom: 40px;
+      @media #{$sp} {
+        font-size: 20px;
+        line-height: 1.75;
+        margin-bottom: 25px;
+      }
     }
 
     .ttl-tertiary {
       font-size: 20px;
       font-weight: 400;
       margin-bottom: 50px;
+      @media #{$sp} {
+        font-size: 16px;
+        line-height: 1.75;
+        margin-bottom: 35px;
+      }
     }
   }
 
@@ -224,6 +244,10 @@
     .ttl-secondary {
       font-size: 32px;
       margin-bottom: 61px;
+      @media #{$sp} {
+        font-size: 20px;
+        margin-bottom: 35px;
+      }
     }
   }
 
@@ -248,6 +272,10 @@
     .ttl-secondary {
       font-size: 32px;
       margin-bottom: 61px;
+      @media #{$sp} {
+        font-size: 20px;
+        margin-bottom: 35px;
+      }
     }
 
     .question-tab,
