--- a/app/assets/scss/4-pages/_saison_invoice.scss
+++ b/app/assets/scss/4-pages/_saison_invoice.scss
@@ -268,6 +268,7 @@
       .act-more {
         margin-left: 0;
         position: relative;
+        max-width: 310px;
 
         @media #{$sp} {
           margin: auto;
