--- a/app/assets/scss/4-pages/_business_support_loan.scss
+++ b/app/assets/scss/4-pages/_business_support_loan.scss
@@ -40,7 +40,7 @@
       font-size: 32px;
       margin-bottom: 40px;
       @media #{$sp} {
-        font-size: 24px;
+        font-size: 20px;
         margin-bottom: 20px;
       }
     }
@@ -52,7 +52,8 @@
       color: $primary-color;
 
       @media #{$sp} {
-        font-size: 18px;
+        font-size: 16px;
+        line-height: 1.75;
         margin-bottom: 20px;
       }
     }
@@ -64,6 +65,10 @@
     min-height: 558px;
     text-align: center;
     position: relative;
+
+    @media #{$sp} {
+      min-height: unset;
+    }
 
     .slick-slider {
       .slick-list {
@@ -180,20 +185,22 @@
 
         @media #{$sp} {
           text-align: center;
+          font-size: 30px;
+          line-height: 1.75;
         }
       }
     }
 
     &__desc {
-      margin-bottom: 51px;
+      margin-bottom: 30px;
       .ttl-quaternary {
         text-align: left;
         font-size: 24px;
         color: #fff;
         @media #{$sp} {
           text-align: center;
-
-          font-size: 20px;
+          font-size: 16px;
+          line-height: 1.75;
         }
       }
     }
@@ -250,12 +257,18 @@
       .act-more {
         margin: auto;
         position: relative;
-        padding: 14px 64px 14px 48px;
         white-space: nowrap;
+        @media #{$pc} {
+          padding: 14px 64px 14px 48px;
+        }
 
         @media #{$sp} {
           max-width: unset;
-          width: 100%;
+          padding-right: 25px;
+
+          &::before {
+            right: 3vw;
+          }
         }
 
         &-tooltip {
@@ -298,11 +311,6 @@
           }
         }
       }
-
-      @media #{$sp} {
-        flex-direction: column;
-        // gap: 100px;
-      }
     }
   }
 
@@ -317,7 +325,8 @@
       color: #fff;
       font-size: 28px;
       @media #{$sp} {
-        font-size: 22px;
+        font-size: 20px;
+        line-height: 1.75;
       }
     }
 
@@ -375,7 +384,8 @@
     }
     .ttl-primary {
       @media #{$sp} {
-        font-size: 22px;
+        font-size: 20px;
+        line-height: 1.75;
       }
     }
 
@@ -383,6 +393,7 @@
       font-size: 20px;
       @media #{$sp} {
         font-size: 14px;
+        text-align: left;
       }
     }
 
@@ -554,7 +565,8 @@
             .card__box {
               .card__box--ttl {
                 @media #{$sp} {
-                  font-size: 19px;
+                  font-size: 16px;
+                  line-height: 1.75;
                 }
               }
 
@@ -576,7 +588,8 @@
 
     .ttl-primary {
       @media #{$sp} {
-        font-size: 22px;
+        font-size: 20px;
+        line-height: 1.75;
       }
     }
 
@@ -719,11 +732,6 @@
 
     @media #{$sp} {
       padding: 35px 15px;
-    }
-    .ttl-secondary {
-      @media #{$sp} {
-        font-size: 22px;
-      }
     }
 
     &__description {
