--- a/app/pages/business_support_loan/index.njk
+++ b/app/pages/business_support_loan/index.njk
@@ -126,7 +126,7 @@
     <section id="loan-support" class="section-primary fadein">
       <h4 class="ttl-quaternary">セゾンビジネスサポートローンとは</h4>
       <h2 class="ttl-primary">このような中小企業・個人事業主にピッタリのサービスです。</h2>
-      <span class="section-primary__description">お持ちのビジネスカードに、<strong>最大950万円のゆとりあるご融資可能枠</strong>とお借り入れ額に応じた<strong>優遇金利</strong>をご用意しております。</span>
+      <p class="section-primary__description">お持ちのビジネスカードに、<strong>最大950万円のゆとりあるご融資可能枠</strong>とお借り入れ額に応じた<strong>優遇金利</strong>をご用意しております。</p>
       <div class="section-primary__wrapper">
         <div class="containers">
           <ul class="inherit card-list">
@@ -173,7 +173,7 @@
             <ul class="flow-list">
               <li class="text-muted">※1　初回はご融資枠全額をご融資いたします。ご融資枠の上限は、年収の1/3以内です。</li>
               <li class="text-muted">※2　ご利用可能枠が110万円以上の方が対象。本サービスご利用前の金利はセゾンプラチナ・ビジネス・アメリカン・エキスプレス®・カードの場合14.5％、セゾンコバルト・ビジネス・
-                </br>　　アメリカン・エキスプレス®・カードの場合18.0％です。
+                </br><span class="pc-only">　　</span>アメリカン・エキスプレス®・カードの場合18.0％です。
               </li>
               <li class="text-muted">※　   審査の結果、110万円未満のご利用可能枠となる場合は、書面にてご連絡いたします。</li>
             </ul>
@@ -308,8 +308,8 @@
 
     <section id="faq" class="section-question-and-answer fadein">
       <h5 class="ttl-sub">FAQ</h5>
-      <h2 class="ttl-secondary">よくある質問</h2>
-      <span class="section-question-and-answer__description">
+      <h2 class="ttl-primary">よくある質問</h2>
+      <p class="section-question-and-answer__description">
         お客様からよくいただくご質問にお答えします。この他にご質問がある方は、<a href="/contact">お問い合わせフォーム</a>より、お気軽にご連絡ください。
         </br>
         2営業日以内に担当者からご連絡させて頂きます。
