--- a/app/assets/scss/4-pages/_business_efficiency.scss
+++ b/app/assets/scss/4-pages/_business_efficiency.scss
@@ -39,6 +39,7 @@
 
       @media #{$sp} {
         font-size: 30px;
+        line-height: 1.75;
         margin-bottom: 18px;
       }
     }
@@ -64,7 +65,7 @@
         padding: 5px 20px;
 
         @media #{$sp} {
-          font-size: 17px;
+          font-size: 16px;
           // padding: 5px 16px;
         }
       }
@@ -77,7 +78,8 @@
       text-shadow: 0px 0px 20px #05172c8d;
 
       @media #{$sp} {
-        font-size: 12px;
+        font-size: 16px;
+        line-height: 1.75;
       }
     }
 
@@ -101,7 +103,8 @@
       margin-bottom: 50px;
 
       @media #{$sp} {
-        font-size: 22px;
+        font-size: 20px;
+        line-height: 1.75;
         margin-bottom: 25px;
       }
     }
@@ -215,7 +218,7 @@
       margin-bottom: 60px;
 
       @media #{$sp} {
-        font-size: 22px;
+        font-size: 20px;
         margin-bottom: 40px;
       }
     }
@@ -322,7 +325,14 @@
 
               @media #{$sp} {
                 margin: 20px auto;
-                font-size: 12px;
+                font-size: 16px;
+                padding: 13px 15px 12px 10px;
+              }
+
+              &::before {
+                @media #{$sp} {
+                  right: 2vw;
+                }
               }
             }
           }
@@ -350,6 +360,20 @@
         @media #{$sp} {
           font-size: 12px;
         }
+      }
+    }
+
+    .card-type22 .description  {
+      @media #{$sp} {
+        font-size: 16px;
+        line-height: 1.75;
+      }
+    }
+
+    .useful-wp .containers .card .card__box .card__box--ttl  {
+      @media #{$sp} {
+        font-size: 16px;
+        line-height: 1.5;
       }
     }
   }
